--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "#database/*": "./database/*.js",
     "#start/*": "./start/*.js",
     "#tests/*": "./tests/*.js",
-    "#config/*": "./config/*.js"
+    "#config/*": "./config/*.js",
+    "#utils/*": "./app/utils/*.js",
+    "#api/*": "./app/api/*.js"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.1",
